--- a/RetoDony/Web.config
+++ b/RetoDony/Web.config
@@ -61,4 +61,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+<connectionStrings>
+	<add name="cn" connectionString="Data Source = DESKTOP-JOMUOSA; Initial Catalog = retodony; Integrated Security = true"
+		 providerName="System.Data.SqlClient"/>
+</connectionStrings>
 </configuration>
