--- a/RetoDony/RetoDony.csproj
+++ b/RetoDony/RetoDony.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -140,7 +141,9 @@
     <Compile Include="Models\DAL\ApplicationDbContext.cs" />
     <Compile Include="Models\Entities\Area.cs" />
     <Compile Include="Models\Entities\Cargo.cs" />
+    <Compile Include="Models\Entities\CargoArea.cs" />
     <Compile Include="Models\Entities\Usuario.cs" />
+    <Compile Include="Models\Entities\UsuarioCargo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -150,6 +153,9 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="fonts\imagenes\Banner.png" />
+    <Content Include="fonts\imagenes\logo.jpg" />
+    <Content Include="fonts\imagenes\logo.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
@@ -187,7 +193,6 @@
     <Content Include="Views\Area\Editar.cshtml" />
     <Content Include="Views\Area\Eliminar.cshtml" />
     <Content Include="Views\Cargo\MostrarCargos.cshtml" />
-    <Content Include="Views\Area\Detalle.cshtml" />
     <Content Include="Views\Cargo\Eliminar.cshtml" />
     <Content Include="Views\Cargo\Crear.cshtml" />
     <Content Include="Views\Cargo\Editar.cshtml" />
